final commit before enemies

--- a/index.html
+++ b/index.html
@@ -7,13 +7,14 @@
     <title>Document</title>
     <link rel="stylesheet" href="styles.css">
 </head>
-<h1>
-<span>Avoid the Enemies</span>
-</h1>
 <body>
     <!-- <Div id="Game-timer"><h2>Timer:</h2></Div> -->
+    <!-- <img src="./images/Mossy - FloatingPlatforms.png" alt=""> -->
     <div>
-        <canvas id="canvas" height="600" width="800"></canvas>
+        <div>
+            <div id="timer"> </div>
+        </div>
+        <canvas id="canvas" height="750" width="900"></canvas>
     </div>
         <script src='/javascript.js'></script>
 </body>
