--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
     <!-- <audio autoplay> -->
@@ -19,6 +19,6 @@
         <canvas id="canvas" height="750" width="950"></canvas>
     </div>
     
-        <script src='/javascript.js'></script>
+        <script src="./javascript.js"></script>
 </body>
 </html>
