--- a/index.html
+++ b/index.html
@@ -8,12 +8,9 @@
     <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
-    <!-- <audio autoplay> -->
-        <source src="./Audio/[YT2mp3.info] - Secret of the Forest Extended - Chrono Trigger (320kbps).mp3" type="audio/mp3">
-      </audio>
     <div>
         <div>
-            <!-- <button id="start">Start</button> -->
+            <button id="start">Start Game</button>
             <div id="timer"></div>
         </div>
         <canvas id="canvas" height="750" width="950"></canvas>
