--- a/index.html
+++ b/index.html
@@ -8,13 +8,18 @@
     <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
-    <div>
-        <div>
-            <button id="start">Start Game</button>
-            <div id="timer"></div>
-        </div>
+    <button id="start">Restart Game</button>
+
+
+    <div id="timer"></div>
+
+    <div id="canvas-div">
+
         <canvas id="canvas" height="750" width="950"></canvas>
+
     </div>
+        
+
     
         <script src="./javascript.js"></script>
 </body>
